mychart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counters
spec:
  type: ClusterIP
  selector:
    app: counters
  ports:
    - port: 5011
      targetPort: 5011

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
