mychart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counters
spec:
  rules:
    - host: counters.default
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counters
                port:
                  number: 5011
